# sigfn-jni

./: settings.gradle
lib/: CMakeLists.txt
lib/src/main/cpp/: CMakeLists.txt  sigfn_jni.cpp
lib/src/main/java/maxtek/sigfn/: Handler.java  Library.java  SigFn.java
lib/src/test/java/maxtek/sigfn/: LibraryTest.java
